--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>morning every one</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. I
+    <p style="background-color: aqua ;border: 12px solid yellow;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. I
         
     nventore cum maxime ipsum nesciunt, quibusdam voluptatem quasi saepe officiis adipisci molestiae aspernatur 
         repellendus, sequi ipsa consectetur assumenda commodi deserunt? Laudantium, nostrum.
